# Zipios

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.md  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  doxyfile  libtool  mk  zipios++.spec  zipios++.spec.in
cmake/: CMakeLists.txt  FindCatch.cmake  FindCppUnit.cmake  FindZipIos++.cmake  FindZipIos.cmake  ZipIosConfig.cmake  ZipiosConfig.cmake
contrib/: zipios++.spec.in  zipios.metainfo.xml.in  zipios.spec.in
debian/: changelog  control  copyright  docs  libzipios++-doc.install  libzipios-dev.install  libzipios-doc.install  libzipios.install  rules
dev/: build  check  coverage  index.php  pack  spaces.sh  todo.sh  upload-website  version
doc/: CMakeLists.txt  README  appnote-with-many-extensions.txt  zip-format.txt  zipios-doc.css  zipios.doxy.in
doc/images/: .cvsignore
doc/www/: index.html
src/: .cvsignore  CMakeLists.txt  FlexLexer.h  Makefile.am  Makefile.in  Makefile.vc  Makefile.vc5  appendzip.cpp  backbuffer.cpp  backbuffer.h  backbuffer.hpp  basicentry.cpp  basicentry.h  collcoll.cpp  collcoll.h  collectioncollection.cpp  deflateoutputstreambuf.cpp  deflateoutputstreambuf.hpp  dircoll.cpp  dircoll.h  directory.cpp  directory.h  directory.hpp  directorycollection.cpp  directoryentry.cpp  dosdatetime.cpp  dostime.c  dostime.h  endofcentraldirectory.cpp  endofcentraldirectory.hpp  example_zip.cpp  fcol.cpp  fcol.h  fcol_common.h  fcolexceptions.cpp  fcolexceptions.h  fcoll.cpp  fcoll.h  fcoll_common.h  fcollexceptions.cpp  (+61 more)
tests/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.vc  Makefile.vc5  all_tests.cpp  backbuffer.cpp  catch_backbuffer.cpp  catch_collectioncollection.cpp  catch_common.cpp  catch_directory_helper.cpp  catch_directorycollection.cpp  catch_directoryentry.cpp  catch_dosdatetime.cpp  catch_dostime.cpp  catch_filepath.cpp  catch_main.cpp  catch_main.hpp  catch_raii_helper.cpp  catch_raii_helpers.cpp  catch_stream.cpp  catch_tests.cpp  catch_tests.h  catch_tests.hpp  catch_version.cpp  catch_virtualseeker.cpp  catch_zipfile.cpp  collectioncollection.cpp  common.cpp  commontest.cpp  commontest.h  directory_helper.cpp  directorycollection.cpp  directoryentry.cpp  dosdatetime.cpp  dostime.cpp  example_zip.cpp  filepath.cpp  raii_helper.cpp  (+24 more)
tools/: CMakeLists.txt  Makefile.am  appendzip.cpp  dosdatetime.cpp  dostime.cpp  zcrc32.cpp  zipdir.cpp  zipios.cpp  zipios_example.cpp
win32/: Makefile.com  Makefile.vc  Makefile.vc5  configure.bat  zipios.dsp  zipios.dsw
zipios/: collectioncollection.hpp  directorycollection.hpp  directoryentry.hpp  dosdatetime.hpp  filecollection.hpp  fileentry.hpp  filepath.hpp  virtualseeker.hpp  zipfile.hpp  zipios-config.hpp.in  zipiosdll.h  zipiosexceptions.hpp
zipios++/: .cvsignore  FlexLexer.h  Makefile.am  Makefile.in  appendzip.cpp  backbuffer.h  basicentry.cpp  basicentry.h  basicentry.hpp  collcoll.cpp  collcoll.h  collectioncollection.hpp  deflateoutputstreambuf.h  deflateoutputstreambuf.hpp  dircoll.cpp  dircoll.h  directory.h  directorycollection.hpp  directoryentry.hpp  dostime.h  example_zip.cpp  fcoll.cpp  fcoll.h  fcoll_common.h  fcollexceptions.cpp  fcollexceptions.h  filecollection.hpp  fileentry.cpp  fileentry.h  fileentry.hpp  filepath.cpp  filepath.h  filepath.hpp  filterinputstreambuf.cpp  filterinputstreambuf.h  filteroutputstreambuf.h  filteroutputstreambuf.hpp  flist.cpp  flist.h  flistentry.cpp  (+44 more)
